# website-snapshot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  wget-log  wget-log.1  wget-log.2
app/: bundle.py  cloner.py  llm_export.py  main.py
app/templates/: index.html
